# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: Linter.yml  pytest.yml
gendiff/: __init__.py  cli.py  events.json  generate_diff.py  get_content.py  get_diff.py  to_string.py
gendiff/formatter/: format_json.py  format_plain.py  format_stylish.py  normalizer.py  utilities.py
gendiff/model/: meta.py  model.py  model_builder.py
gendiff/modul/: get_diff.py  to_string.py
gendiff/parser/: get_extension.py  parse.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_corrects.py  test_corrects_jsonf.py  test_corrects_plain.py  test_fails.py  test_list.py  test_plain_list.py
tests/fixtures/: file_to_load.json  result_jsonf.txt  result_jsonf_revert.txt  result_lst.txt  result_plain_list.txt  result_plain_revert.txt
tests/fixtures/json/: json1.json  json2.json  json_lst1.json  json_lst2.json  result_revert.txt
tests/fixtures/template/: result.txt  result2.txt
tests/fixtures/yaml/: result2.txt  yaml1.yml  yaml2.yml
tests/json/: test_json.py
tests/template/: test_template.py
tests/yaml/: test_yaml.py
