[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "pytho-project-50"
authors = ["sanswed <sanswed@gmail.com>"]
repository = "https://github.com/ConstableFraser/python-project-50"

packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
