[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "pytho-project-50"
authors = ["sanswed <sanswed@gmail.com>"]
repository = "https://github.com/ConstableFraser/python-project-50"

packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
